@@ -124,5 +124,38 @@
             <long>Default background pixmap</long>
          </locale>
       </schema>
+      <schema>
+         <key>/schemas/apps/cairo-compmgr/default/screen/color_background</key>
+         <applyto>/apps/cairo-compmgr/default/screen/color_background</applyto>
+         <owner>gnome</owner>
+         <type>string</type>
+		 <default>#000000</default>
+         <locale name="C">
+            <short>Default background color</short>
+            <long>Default background color</long>
+         </locale>
+      </schema>
+      <schema>
+         <key>/schemas/apps/cairo-compmgr/default/screen/background_x</key>
+         <applyto>/apps/cairo-compmgr/default/screen/background_x</applyto>
+         <owner>gnome</owner>
+         <type>int</type>
+		 <default>0</default>
+         <locale name="C">
+            <short>Default background pixmap x position</short>
+            <long>Default background pixmap x position (= 0 image is centered)</long>
+         </locale>
+      </schema>
+      <schema>
+         <key>/schemas/apps/cairo-compmgr/default/screen/background_y</key>
+         <applyto>/apps/cairo-compmgr/default/screen/background_y</applyto>
+         <owner>gnome</owner>
+         <type>int</type>
+		 <default>0</default>
+         <locale name="C">
+            <short>Default background pixmap y position</short>
+            <long>Default background pixmap y position (= 0 image is centered)</long>
+         </locale>
+      </schema>
    </schemalist>
 </gconfschemafile>
