@@ -287,3 +287,28 @@ ccm_config_set_integer_list(CCMConfig* self, GSList * value)
 						  self->priv->key, GCONF_VALUE_INT, 
 						  (GSList *)value, NULL);
 }
+
+const GdkColor*
+ccm_config_get_color(CCMConfig* self)
+{
+	gchar* value = ccm_config_get_string (self);
+	static GdkColor* color = NULL;
+	
+	if (!color) color = g_new0(GdkColor, 1);
+	
+	if (value && value[0] == '#')
+    {
+        gint c[3];
+
+    	if (sscanf(value, "#%2x%2x%2x", &c[0], &c[1], &c[2]) == 3)
+    	{
+			color->red = c[0] << 8 | c[0];
+            color->green = c[1] << 8 | c[1];
+            color->blue = c[2] << 8 | c[2];
+			
+			return color;
+    	}
+    }
+	
+	return color;
+}
